# stomp

./: .gitignore
src/: stomp
stomp/: CMakeLists.txt  README.txt  package.xml  stomp_2d_test.rviz  stomp_constrained.rviz  stomp_traj_costs.perspective
stomp/2019-12-30/: 2019_12_25_stomp_notes.txt  2019_12_27_stomp_notes_init_audit.txt  2019_12_27_stomp_notes_iterate_table1_audit.txt  2019_12_31_notes.txt  2020_01_01_notes.txt  scraps.cpp
stomp/include/stomp/: covariant_movement_primitive.h  policy_improvement.h  stomp.h  stomp_test.h  stomp_utils.h  task.h  ur_kin.h
stomp/notes/2019-12-30/: 2019_12_21_flight_notes.txt  2020_01_01_notes.txt  scraps.cpp
stomp/notes/2020-01-14/: notes_2020_01_14.txt
stomp/putwall_points/: putwall_points_0000000.yaml  putwall_points_0000001.yaml
stomp/src/: chomp.cpp  covariant_movement_primitive.cpp  policy_improvement.cpp  stomp.cpp  stomp_constrained.cpp  stomp_test.cpp  stomp_utils.cpp  ur_kin.cpp
stomp/srv/: HandlePlanStomp.srv  HandlePlanStompSrv.srv
stomp/test/: delayed.launch  plot_stomp_2d_test.py  stomp_2d_00.cpp  stomp_2d_test.cpp  stomp_2d_test.h  stomp_2d_test.launch  stomp_2d_test.yaml  stomp_2d_test_plot.py  stomp_constrained_test.cpp  stomp_node.cpp  stomp_test.launch  stomp_test.yaml  stomp_test_correct_axis_but_not_enough_noise_stddev.yaml  stomp_test_just_right.yaml  stomp_test_noise_stddev_along_y_axis_wrong_axis.yaml  test_ur_kin.cpp
